--- a/static/index.html
+++ b/static/index.html
@@ -28,7 +28,7 @@
   </style>
   <body>
     <h1>Responder WebSocket</h1>
-    <input type="text" id="textbox" placeholder="ここにメッセージを入れてEnterキーを推してね">
+    <input type="text" id="textbox" placeholder="ここにメッセージを入れてEnterキーを押してね">
     <ul id="chat">
     </ul>
   </body>
