--- a/static/index.html
+++ b/static/index.html
@@ -20,6 +20,7 @@
       font-size: 15px;
       padding: 10px;
       border: 1px solid #000;
+      word-break: break-word;
     }
 
     li:nth-child(even) {
