--- a/static/index.html
+++ b/static/index.html
@@ -1,40 +1,48 @@
 <html>
   <head>
-    <meta charset="utf-8">
-    <title>Responder Websocket</title>
-  </head>
-  <style>
-    input {
-      border: 1px solid #000;
-      border-radius: 5px;
-      height: 30px;
-      width: 500px;
-    }
+    <meta charset="utf-8"> 
+    <title>Responder Websocket</title> 
+    <style> 
+      input {
+        border: 1px solid #000;
+        border-radius: 5px;
+        height: 30px;
+        width: 500px;
+      }
 
-    ul {
-      list-style: none;
-      padding: 0;
-    }
+      ul {
+        list-style: none;
+        padding: 0;
+      }
 
-    li {
-      font-size: 15px;
-      padding: 10px;
-      border: 1px solid #000;
-      word-break: break-word;
-    }
+      li {
+        font-size: 15px;
+        padding: 10px;
+        border: 2px solid #000; 
+        word-break: break-word;
+      }
 
-    li:nth-child(even) {
-      background: #ccc;
-    }
-  </style>
+      li:not(:first-child) {
+	border-top: none;
+      }
+
+      li:nth-child(even) {
+        background: #ccc;
+      }
+    </style>
+  </head> 
+  
   <body>
     <h1>Responder WebSocket</h1>
     <input type="text" id="textbox" placeholder="ここにメッセージを入れてEnterキーを押してね">
+
     <ul id="chat">
     </ul>
 
     <script>
-        var ws = new WebSocket('wss://' + location.hostname + '/ws');
+        var url = 'wss://' + location.hostname + '/ws'
+        //var url = 'ws://localhost:5042/ws'
+        var ws = new WebSocket(url);
         var textbox = document.getElementById('textbox');
         ws.onmessage = function (e) {
           var chat = document.getElementById('chat');
@@ -57,6 +65,6 @@
             }
           });
         }
-      </script>
-    </body>
-  </html>
+    </script>
+  </body>
+</html>
