--- a/static/index.html
+++ b/static/index.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <meta charset="utf-8"> 
-    <title>Responder Websocket</title> 
+    <title>Responder Websocket Chat</title> 
     <style> 
       input {
         border: 1px solid #000;
