--- a/static/index.html
+++ b/static/index.html
@@ -33,7 +33,7 @@
   </head> 
   
   <body>
-    <h1>Responder WebSocket</h1>
+    <h1>Responder WebSocket Chat</h1>
     <input type="text" id="textbox" placeholder="ここにメッセージを入れてEnterキーを押してね">
 
     <ul id="chat">
